--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "src/services"]
-	path = src/services
-	url = https://github.com/cloudfoundry/vcap-services.git
+;[submodule "src/services"]
+;path = src/services
+;url = https://github.com/cloudfoundry/vcap-services.git
 [submodule "src/services_warden"]
 	path = src/services_warden
 	url = https://github.com/cloudfoundry/warden.git
