--- a/src/mysql_service/Gemfile
+++ b/src/mysql_service/Gemfile
@@ -22,7 +22,7 @@ gem 'warden-client', :require => ['warden/client'], :git => 'git://github.com/cl
 gem 'warden-protocol', :require => ['warden/protocol'], :git => 'git://github.com/cloudfoundry/warden.git', :ref => 'fe6cb51'
 
 group :test do
-  gem 'activesupport'
+  gem 'activesupport', '~> 3.2'
   gem 'sequel'
   gem "rspec"
   gem "ci_reporter"
