--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -10,7 +10,7 @@ name: (( meta.environment "-v1-mysql" ))
 director_uuid: (( merge ))
 
 releases:
-- name: cf-services-release
+- name: cf-services
   version: latest
 
 compilation:
