--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -45,7 +45,7 @@ jobs:
   instances: 1
   resource_pool: services-small
   networks:
-  - name: services1
+  - name: services_v1_mysql_1
     static_ips: (( static_ips(10) ))
   properties:
     mysql_gateway:
@@ -64,7 +64,7 @@ jobs:
   resource_pool: services-small
   persistent_disk: 4096
   networks:
-  - name: services1
+  - name: services_v1_mysql_1
     static_ips: (( static_ips(11) ))
   properties:
     mysql_node:
