--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -15,7 +15,7 @@ releases:
 
 compilation:
   workers: 3
-  network: services_v1_mysql_1
+  network: services1
   reuse_compilation_vms: true
   cloud_properties: (( merge ))
 
@@ -30,7 +30,7 @@ networks: (( merge ))
 
 resource_pools:
 - name: services-small
-  network: services_v1_mysql_1
+  network: services1
   size: (( auto ))
   stemcell:
     name: bosh-stemcell
@@ -45,7 +45,7 @@ jobs:
   instances: 1
   resource_pool: services-small
   networks:
-  - name: services_v1_mysql_1
+  - name: services1
     static_ips: (( static_ips(10) ))
   properties:
     mysql_gateway:
@@ -64,7 +64,7 @@ jobs:
   resource_pool: services-small
   persistent_disk: 4096
   networks:
-  - name: services_v1_mysql_1
+  - name: services1
     static_ips: (( static_ips(11) ))
   properties:
     mysql_node:
