--- a/templates/cf-infrastructure-aws.yml
+++ b/templates/cf-infrastructure-aws.yml
@@ -5,17 +5,17 @@ compilation:
 
 networks:
   - name: services1
-    type: (( merge ))
+    type: manual
     subnets:
     - name: default_unused
       range: 10.10.32.0/20
       reserved:
-        - 10.10.32.0 - 10.10.33.255
-        - 10.10.36.1 - 10.10.47.254
+        - 10.10.32.0 - 10.10.35.255
+        - 10.10.38.1 - 10.10.47.254
       static:
-        - 10.10.34.1 - 10.10.34.255
+        - 10.10.36.1 - 10.10.36.255
       gateway: 10.10.32.1
-      dns: (( merge ))
+      dns: 10.10.0.2
       cloud_properties:
         security_groups:
         - cf
