--- a/templates/cf-infrastructure-aws.yml
+++ b/templates/cf-infrastructure-aws.yml
@@ -15,7 +15,8 @@ networks:
       static:
         - 10.10.36.1 - 10.10.36.255
       gateway: 10.10.32.1
-      dns: 10.10.0.2
+      dns:
+        - 10.10.0.2
       cloud_properties:
         security_groups:
         - cf
