Allow user to set protocol for CC communication in template
In this case, HTTP instead of HTTPS

--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -92,4 +92,5 @@ properties:
           max_connections: 100
   nats: (( merge ))
   cc:
-    srv_api_uri: (( "https://api." system_domain ))
+    srv_api_uri: (( protocol "://api."  system_domain ))
+    protocol: (( merge  || "https" ))
