Fix the spiff template

--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -78,7 +78,9 @@ properties:
   system_domain: (( merge ))
   uaa_client_id: "cf"
   uaa_endpoint: (( "http://uaa." system_domain ))
-  uaa_client_auth_credentials:  (( appdirect_gateway.uaa_client_auth_credentials ))
+  appdirect_gateway:
+    uaa_client_auth_credentials: (( merge ))
+  uaa_client_auth_credentials: (( appdirect_gateway.uaa_client_auth_credentials ))
   service_plans:
     mysql:
       "100mb":
