Put stemcell name in infrastructure template.
[#59883868]

--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -7,7 +7,7 @@ meta:
   environment: ~
 
   stemcell:
-    name: bosh-stemcell
+    name: (( merge ))
     version: latest
 
 name: (( meta.environment "-v1-mysql" ))
