--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -14,7 +14,7 @@ name: (( meta.environment "-v1-mysql" ))
 director_uuid: (( merge ))
 
 releases:
-- name: cf-services-release
+- name: cf-services
   version: latest
 
 compilation:
@@ -41,7 +41,7 @@ resource_pools:
 
 jobs:
 - name: mysql_gateway
-  release: cf-services-release
+  release: cf-services
   template:
   - mysql_gateway
   instances: 1
@@ -59,7 +59,7 @@ jobs:
       version_aliases:
         "current": "5.5"
 - name: mysql_node
-  release: cf-services-release
+  release: cf-services
   template:
   - mysql_node
   instances: 1
@@ -73,6 +73,7 @@ jobs:
       plan: "100mb"
       supported_versions:
       - '5.5'
+      loopback_required: true
 
 properties:
   system_domain: (( merge ))
