--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -34,7 +34,7 @@ networks: (( merge ))
 
 resource_pools:
 - name: services-small
-  network: services1
+  network: services_v1_mysql
   size: (( auto ))
   stemcell: (( meta.stemcell ))
   cloud_properties: (( merge ))
@@ -47,7 +47,7 @@ jobs:
   instances: 1
   resource_pool: services-small
   networks:
-  - name: services1
+  - name: services_v1_mysql
     static_ips: (( static_ips(10) ))
   properties:
     mysql_gateway:
@@ -66,7 +66,7 @@ jobs:
   resource_pool: services-small
   persistent_disk: 4096
   networks:
-  - name: services1
+  - name: services_v1_mysql
     static_ips: (( static_ips(11) ))
   properties:
     mysql_node:
