--- a/templates/cf-services-template.yml
+++ b/templates/cf-services-template.yml
@@ -46,9 +46,7 @@ jobs:
   - mysql_gateway
   instances: 1
   resource_pool: services-small
-  networks:
-  - name: services_v1_mysql
-    static_ips: (( static_ips(10) ))
+  networks: (( merge ))
   properties:
     mysql_gateway:
       token: chuckecheese
@@ -65,9 +63,7 @@ jobs:
   instances: 1
   resource_pool: services-small
   persistent_disk: 4096
-  networks:
-  - name: services_v1_mysql
-    static_ips: (( static_ips(11) ))
+  networks: (( merge ))
   properties:
     mysql_node:
       plan: "100mb"
