--- a/templates/cf-infrastructure-vsphere.yml
+++ b/templates/cf-infrastructure-vsphere.yml
@@ -2,19 +2,6 @@ meta:
   stemcell:
     name: bosh-vsphere-esxi-ubuntu
 
-jobs:
-  - name: mysql_gateway
-    instances: 1
-    networks:
-    - name: services_v1_mysql
-      static_ips: (( static_ips(10) ))
-
-  - name: mysql_node
-    instances: 1
-    networks:
-    - name: services_v1_mysql
-      static_ips: (( static_ips(11) ))
-
 compilation:
   cloud_properties:
     ram: 1024
@@ -31,3 +18,7 @@ resource_pools:
       disk: 10480
       cpu: 1
 
+properties:
+  jobs_network: services_v1_mysql
+  mysql_gateway_ip: SPECIFY-IP-ADDRESS-HERE
+  mysql_node_ip: SPECIFY-IP-ADDRESS-HERE
